@@ -25,19 +25,20 @@ Centered moment of order 8=class=Point name=Unnamed dimension=3 values=[775.754,
 Centered moment of order 9=class=Point name=Unnamed dimension=3 values=[0,110807,-60487.5]
 Marginal 1=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=1 data=[[0],[3],[1],[7]]
 Marginal [2, 0]=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=2 data=[[9,1],[5,2],[8,5],[2,6]]
-Rank=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[0,0,3],[1,2,1],[2,1,2],[3,3,0]]
-Sort=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,5],[5,1,8],[6,7,2]]
-Sort according to component 0=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,5],[5,1,8],[6,7,2]]
+Rank           =class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[0,0,3],[1,2,1],[2,1,2],[3,3,0]]
 Quantile per component(0.25)=class=Point name=Unnamed dimension=3 values=[1.5,0.5,3.5]
 Quantile per component(class=Point name=Unnamed dimension=2 values=[0.25,0.75])=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=2 dimension=3 description=[q0,q1,q2] data=[[1.5,0.5,3.5],[5.5,5,8.5]]
 Quantile per component(class=Point name=Unnamed dimension=2 values=[0.75,0.25])=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=2 dimension=3 description=[q0,q1,q2] data=[[5.5,5,8.5],[1.5,0.5,3.5]]
 Empirical CDF(class=Point name=Unnamed dimension=3 values=[0.25,0.25,0.25]=0
 Pearson correlation (exact)=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.25,0,0.25,1,0.25,0,0.25,1]
 Spearman correlation (exact)=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.239359,0,0.239359,1,0.239359,0,0.239359,1]
+sample=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[5,1,9],[2,2,9]]
 Rank=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[0,0,1.5],[1.5,3,1.5],[3,1,1.5],[1.5,2,1.5]]
-Sort=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
 Rank component 0=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=1 data=[[0],[1.5],[3],[1.5]]
-Sort according to component 0=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[2,2,9],[5,1,9]]
+Sort           =class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Sort (in place)=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Sort according to component 0           =class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[2,2,9],[5,1,9]]
+Sort according to component 0 (in place)=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[2,2,9],[5,1,9]]
 Spearman correlation=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.316228,0,0.316228,1,0,0,0,1]
 Kendall tau=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.182574,0,0.182574,1,0,0,0,1]
 Normal=class=Normal name=Normal dimension=3 mean=class=Point name=Unnamed dimension=3 values=[0,0,0] sigma=class=Point name=Unnamed dimension=3 values=[1,1,1] correlationMatrix=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.25,0,0.25,1,0.25,0,0.25,1]
@@ -45,5 +46,7 @@ covariance=class=CovarianceMatrix dimension=3 implementation=class=MatrixImpleme
 Empirical covariance=class=CovarianceMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[0.984954,0.228389,-0.00175117,0.228389,1.00735,0.241997,-0.00175117,0.241997,1.01046]
 Pearson correlation=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.229286,-0.00175534,0.229286,1,0.239862,-0.00175534,0.239862,1]
 Spearman correlation=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.219846,-0.00317292,0.219846,1,0.23306,-0.00317292,0.23306,1]
-Unique=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
-Unique=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=3 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9]]
+Unique           =class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Unique (in place)=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Unique           =class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=3 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9]]
+Unique (in place)=class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=3 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9]]
