@@ -36,8 +36,10 @@ Pearson correlation (exact)= class=CorrelationMatrix dimension=3 implementation=
 Spearman correlation (exact)= class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.239359,0,0.239359,1,0.239359,0,0.239359,1]
 Rank= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[0,0,1.5],[1.5,3,1.5],[3,1,1.5],[1.5,2,1.5]]
 Rank component 0= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=1 data=[[0],[1.5],[3],[1.5]]
-Sort= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
-Sort according to component 0= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[2,2,9],[5,1,9]]
+Sort           = class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Sort (in place)= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Sort according to component 0           = class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[2,2,9],[5,1,9]]
+Sort according to component 0 (in place)= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,3,9],[2,2,9],[5,1,9]]
 Spearman correlation= class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.316228,0,0.316228,1,0,0,0,1]
 Kendall tau= class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.182574,0,0.182574,1,0,0,0,1]
 Normal= class=Normal name=Normal dimension=3 mean=class=Point name=Unnamed dimension=3 values=[0,0,0] sigma=class=Point name=Unnamed dimension=3 values=[1,1,1] correlationMatrix=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.25,0,0.25,1,0.25,0,0.25,1]
@@ -45,5 +47,7 @@ covariance= class=CovarianceMatrix dimension=3 implementation=class=MatrixImplem
 Empirical covariance= class=CovarianceMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[0.984954,0.228389,-0.00175117,0.228389,1.00735,0.241997,-0.00175117,0.241997,1.01046]
 Pearson correlation= class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.229286,-0.00175534,0.229286,1,0.239862,-0.00175534,0.239862,1]
 Spearman correlation= class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.219846,-0.00317292,0.219846,1,0.23306,-0.00317292,0.23306,1]
-Unique= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
-Unique= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=3 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9]]
+Unique           = class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Unique (in place)= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=4 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9],[5,1,9]]
+Unique           = class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=3 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9]]
+Unique (in place)= class=Sample name=Unnamed implementation=class=SampleImplementation name=Unnamed size=3 dimension=3 data=[[1,0,9],[2,2,9],[2,3,9]]
